--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
-@import url(./vendor/normalize.css);
-
 body {
   background-color: #202020;
-  min-height: 100%;
+  /* min-height: 100%; */
   /* display: flex;
   flex-direction: column;
   justify-content: center;
