--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,5 @@
 .header__logo {
     width: 38px;
-    padding-left: 70px;
 }
 
 .header {
@@ -9,19 +8,24 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 41px;
+    padding-left: 70px;
+    padding-right: 70px;
 }
 
 .header__navbar_item {
-    font-size: 18px;
+    font-weight: 500;
+    font-size: 12px;
     line-height: 16px;
     color: #fff;
     text-decoration: none;
     border: none;
-    font-weight: 500;
-    font-size: 12px;
-    margin-right: 30px;
+    margin-left: 30px;
+    padding: 0; /* сбросить стандартные отступы */
 }
+
+/* .header__navbar_item:last-child {
+    margin-right: 30px;
+} */
 
 .header__navbar_item-register {
     background-color: unset;
@@ -29,21 +33,30 @@
 
 .header__navbar_item-login {
     background-color: #3DDC84;
-    width: 76px;
+    min-width: 76px;
     height: 32px;
     border-radius: 3px;  
     color: #000;
 }
   
 @media screen and (max-width: 768px) {
-    .header__logo {
+    .header {
         padding-left: 30px;
+        padding-right: 30px;
     }
 }
 
 @media screen and (max-width: 320px) {
-    .header__logo {
+    .header {
         padding-left: 14px;
+        padding-right: 14px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header__navbar_item {
+        margin-left: 14px;
+
     }
 }
 
