--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,6 +1,40 @@
-.test-title {
+.content {
+    padding-left: 70px;
+    padding-right: 70px;
     color: #fff;
-    font-weight: 400;
-    margin-top: 0; /* сбросить стандартный отступ */
-    margin-bottom: 0; /* сбросить стандартный отступ */
+    /* margin: 0 auto; */
 }
+.lead {
+    background-color: #272727;
+    border-radius: 10px;
+    margin-top: 20px;
+    min-height: 493px;
+    padding-top: 160px;
+}
+  
+@media screen and (max-width: 768px) {
+    .content {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .lead {
+        padding-top: 350px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .content {
+        padding-left: 18px;
+        padding-right: 18px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .lead {
+        padding-top: 220px;
+    }
+}
+  
