--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -8,8 +8,9 @@
     background-color: #272727;
     border-radius: 10px;
     margin-top: 20px;
-    min-height: 493px;
     padding-top: 160px;
+    margin-left: -30px;
+    margin-right: -30px;
 }
   
 @media screen and (max-width: 768px) {
