--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -4,4 +4,22 @@
     font-size: 50px;
     line-height: 58px;
     font-weight: 400;
+    max-width: 730px;
+    letter-spacing: -1.4px;
+}
+
+@media screen and (max-width: 1279px) {
+    .promo__title {
+        max-width: 680px;
+        font-size: 40px;
+        line-height: 52px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .promo__title {
+        max-width: 292px;
+        font-size: 29px;
+        line-height: 37px;
+    }
 }
