--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -102,7 +102,7 @@
 }
 
 @media screen and (max-width: 1279px) {
-    .about-project__title {
+    .title-container__title {
         font-size: 22px;
     }
 }
@@ -144,6 +144,18 @@
 }
 
 @media screen and (max-width: 767px) {
+    .title-container {
+        padding-bottom: 28px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .title-container__title {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .about-project__description-column_title {
         margin-bottom: 16px;
         font-size: 18px;
@@ -152,6 +164,12 @@
 
 @media screen and (max-width: 767px) {
     .about-project__presentation-column-title {
+        font-size: 11px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .about-project__presentation-column-paragraph {
         font-size: 11px;
     }
 }
@@ -221,8 +239,4 @@
     .about-project__description-column:last-child {
         margin-bottom: 0;
     }
-}
-
-.about-project__presentation-column-paragraph {
-    font-size: 11px;
 }
