--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -12,6 +12,13 @@
     margin-left: -30px;
     margin-right: -30px;
 }
+
+.techs {
+    background-color: #272727;
+    padding: 100px 70px;
+    margin-left: auto;
+    margin-right: auto;
+}
   
 @media screen and (max-width: 1279px) {
     .content {
