--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -144,6 +144,15 @@
 }
 
 @media screen and (max-width: 767px) {
+    .about-project {
+        padding-left: 4px;
+        padding-right: 4px;
+        padding-top: 70px;
+        padding-bottom: 70px;
+    }
+}
+
+@media screen and (max-width: 767px) {
     .title-container {
         padding-bottom: 28px;
     }
