--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -20,6 +20,10 @@
     margin-right: -70px;
 }
 
+.about-me {
+    padding: 110px 70px 100px;
+}
+
   
 @media screen and (max-width: 1279px) {
     .content {
