feat: сверстать компонент Portfolio

--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -24,6 +24,10 @@
     padding: 110px 70px 100px;
 }
 
+.portfolio {
+    padding-bottom: 125px;
+}
+
   
 @media screen and (max-width: 1279px) {
     .content {
