--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -16,6 +16,10 @@
 .about-me-content__description-title {
     margin-top: 0; /*сбросить стандартный отступ*/
     margin-bottom: 18px;
+    font-size: 50px;
+    line-height: 58px;
+    font-weight: 400;
+    letter-spacing: -0.04em;
 }
 
 .about-me-content__description-paragraph {
@@ -24,26 +28,118 @@
 
 .about-me-content__description-paragraph_job {
     margin-bottom: 26px;
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 500;
 }
 
 .about-me-content__description-paragraph_about {
     margin-bottom: 0; /*сбросить стандартный отступ*/
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 400;
 }
 
 .about-me-content__list {
     margin: 99px auto 0;
     display: flex;
-    /* justify-content: space-between; */
     list-style-type: none; /*убрать маркеры списка*/
     padding-left: 0; /*сбросить стандартный отступ*/
 }
 
-.about-me-content__item {
+.about-me-content__list-item {
     font-size: 14px;
     font-weight: 500;
     margin-left: 20px;
 }
 
-.about-me-content__item:first-child {
+.about-me-content__list-item:first-child {
     margin-left: 0;
+}
+
+@media screen and (max-width: 1279px) {
+    .about-me-content__description {
+        max-width: 57%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .about-me-content__description {
+        max-width: 364px;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .about-me-content__photo-author {
+        max-width: 255px;
+        height: 307px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .about-me-content {
+        flex-direction: column-reverse;
+        align-items: center;
+        padding-top: 60px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .about-me-content__photo-author {
+        max-width: 292px;
+        height: 352px;
+    }
+}
+
+@media screen and (max-width: 1279px) {
+    .about-me-content__description-title {
+        margin-bottom: 16px;
+        font-size: 40px;
+        line-height: 40px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .about-me-content__description-title {
+        margin-bottom: 20px;
+        font-size: 30px;
+        line-height: normal;
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .about-me-content__description-paragraph_job {
+        margin-bottom: 20px;
+        font-size: 11px;
+        line-height: 16px;
+    }
+}
+
+@media screen and (max-width: 1279px) {
+    .about-me-content__description-paragraph_about {
+        font-size: 12px;
+        line-height: 18px;
+        font-weight: 500;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .about-me-content__description-paragraph_about {
+        font-size: 11px;
+        line-height: 16px;
+        font-weight: 400;
+    }
+}
+
+@media screen and (max-width: 1279px) {
+    .about-me-content__list {
+        margin-top: 87px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .about-me-content__list {
+        margin-top: 40px;
+    }
 }
