--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -56,6 +56,8 @@
     .about-me {
         padding-top: 90px;
         padding-bottom: 90px;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 }
 
@@ -87,6 +89,8 @@
     .about-me {
         padding-top: 70px;
         padding-bottom: 70px;
+        margin-left: 0;
+        margin-right: 0;
     }
 }
   
