--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -26,6 +26,8 @@
     justify-content: space-between;
     color: #fff;
     align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .footer__social {
@@ -34,6 +36,8 @@
 
 .footer__date {
     color: #fff;
+    margin-top: 0; /* сбросить стандартный отступ */
+    margin-bottom: 0; /* сбросить стандартный отступ */
 }
 
 .footer__social_link {
