--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -28,7 +28,6 @@
 .portfolio {
     padding-bottom: 125px;
 }
-
   
 @media screen and (max-width: 1279px) {
     .content {
@@ -55,6 +54,14 @@
 @media screen and (max-width: 1279px) {
     .about-me {
         padding-top: 90px;
+        padding-bottom: 90px;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
+
+@media screen and (max-width: 1279px) {
+    .portfolio {
         padding-bottom: 90px;
         margin-left: 20px;
         margin-right: 20px;
@@ -88,6 +95,14 @@
 @media screen and (max-width: 767px) {
     .about-me {
         padding-top: 70px;
+        padding-bottom: 70px;
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .portfolio {
         padding-bottom: 70px;
         margin-left: 0;
         margin-right: 0;
