--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -73,6 +73,8 @@
 @media screen and (max-width: 767px) {
     .footer__content {
         flex-direction: column-reverse;
+        padding-top: 0;
+        padding-bottom: 10px;
     }
 }
 
@@ -101,6 +103,6 @@
 @media screen and (max-width: 767px) {
     .footer__date {
         margin-top: 0;
-        margin-bottom: 10;
+        color: #8B8B8B;
     }
 }
