--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -5,7 +5,7 @@
     line-height: 58px;
     font-weight: 400;
     max-width: 730px;
-    letter-spacing: -1.4px;
+    letter-spacing: -0.04em;
 }
 
 @media screen and (max-width: 1279px) {
