--- a/src/components/FormSubmitButton/FormSubmitButton.css
+++ b/src/components/FormSubmitButton/FormSubmitButton.css
@@ -1,4 +1,12 @@
 .form-submit-button {
+    width: 100%;
     height: 45px;
     background-color: #4285F4;
+    border-radius: 3px;
+    border: none;
+    padding: 13px;
+    font-size: 14px;
+    font-weight: 400;
+    color: #fff;
+    cursor: pointer;
 }
