--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,6 +1,8 @@
 .register-form__container {
     max-width: 396px;
-    margin: 70px auto 0;
+    margin: 0 auto;
+    padding-top: 70px;
+    padding-bottom: 70px;
 }
 
 .register-form__logo {
@@ -10,4 +12,11 @@
 .register-form__title_margin {
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+.register-form__content_align {
+    min-height: 413px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
