--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -22,6 +22,8 @@
     color: #000;
     font-weight: 500;
     font-size: 12px;
+    display: flex;
+    align-items: center;
 }
 
 .header__navbar_item-account {
@@ -41,8 +43,11 @@
     font-size: 13px;
 }
 
-.header__navbar {
+.header__navbar-container {
     width: 100%;
+}
+
+.header__navbar {
     display: flex;
     align-items: baseline;
 }
