--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -35,6 +35,8 @@
     color: #fff;
     font-weight: 500;
     font-size: 14px;
+    display: flex;
+    align-items: center;
 }
 
 .header__navbar_item-movies {
