feat: доработать компоненты для отображения карточек фильмов

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -66,4 +66,5 @@
     margin-top: 0; /*сброшены стандартные отступы*/
     margin-bottom: 0; /*сброшены стандартные отступы*/
     padding-left: 12px;
-  }
+    color: #fff;
+}
