--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -1,1 +1,24 @@
-  
+.movies-container {
+    padding-left: 70px;
+    padding-right: 70px;
+}
+
+.movies-container__more-button-container {
+   display: flex;
+   width: 100%;
+   justify-content: center;
+}
+
+.movies-container__more-button {
+    margin-top: 80px;
+    margin-bottom: 80px;
+    padding: 11px 60px 9px;
+    background-color: #2F2F2F;
+    border-radius: 6px;
+    border: none;
+    width: 320px;
+    height: 36px;
+    font-size: 12px;
+    font-weight: 500;
+    color: #fff;
+}
