--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -19,6 +19,7 @@
   font-weight: 500;
   margin-top: 0; /*сброшены стандартные отступы*/
   margin-bottom: 0; /*сброшены стандартные отступы*/
+  color: #fff;
 }
 
 .movies-card__about-duration {
@@ -32,7 +33,7 @@
 .movies-card__image-container {
   height: 203px;
   display: block;
-  background-color: green; /*тестовый цвет для наглядности при разработке*/
+  background-color: #222;
   display: flex;
   align-items: center;
   justify-content: center;
