feat: доработать стили для компонента формы поиска

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -24,6 +24,8 @@
     color: #8B8B8B;
     border: none;
     background-color: initial;
+    width: 100%;
+    margin-right: 5px;
 }
 
 .search-form__button {
