--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -3,3 +3,17 @@
     padding-left: 70px;
     padding-right: 70px;
 }
+
+@media screen and (max-width: 1279px) {
+    .saved-movies-container {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .saved-movies-container {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
