feat: настроить адаптив для компонентов регистрации и логина

--- a/src/components/FormParagraph/FormParagraph.css
+++ b/src/components/FormParagraph/FormParagraph.css
@@ -5,3 +5,9 @@
     margin-top: 0;
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 767px) {
+    .form-paragraph {
+        font-size: 12px;
+    }
+}
