--- a/src/components/FormSubmitButton/FormSubmitButton.css
+++ b/src/components/FormSubmitButton/FormSubmitButton.css
@@ -4,9 +4,16 @@
     background-color: #4285F4;
     border-radius: 3px;
     border: none;
-    padding: 13px;
+    padding: 14px;
     font-size: 14px;
     font-weight: 500;
     color: #fff;
     cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+    .form-submit-button {
+        padding: 15px;
+        font-size: 12px;
+    }  
 }
