--- a/src/components/FormTitle/FormTitle.css
+++ b/src/components/FormTitle/FormTitle.css
@@ -5,3 +5,9 @@
     margin-top: 0;
     margin-bottom: 0;
 }
+
+@media screen and (max-width: 767px) {
+    .form-title {
+        text-align: center;
+    }
+}
