--- a/src/components/LinkName/LinkName.css
+++ b/src/components/LinkName/LinkName.css
@@ -5,3 +5,9 @@
     margin-left: 6px;
     text-decoration: none;
 }
+
+@media screen and (max-width: 767px) {
+    .link {
+        font-size: 12px;
+    } 
+}
