--- a/src/components/ErrorPage/ErrorPage.css
+++ b/src/components/ErrorPage/ErrorPage.css
@@ -28,3 +28,36 @@
     display: block;
     margin-top: 184px;
 }
+
+@media screen and (max-width: 1279px) {
+    .error-page {
+        padding-top: 408px;
+        padding-bottom: 222px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .error-page {
+        padding-top: 329px;
+        padding-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .error-page__error-title {
+        font-size: 80px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .error-page__error-paragraph {
+        font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .error-page__link {
+        font-size: 12px;
+        margin-top: 284px;
+    }
+}
