--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -82,7 +82,9 @@
         background-position: center;
         background-size: 100%;
         cursor: pointer;
+        border: none;
         transition: 0.6s ease-in-out;
+        background-color: inherit;
     }
 
     .header__menu-button:hover {
