--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -45,10 +45,6 @@
     font-size: 13px;
 }
 
-/* .header__navbar-container {
-    width: 100%;
-} */
-
 .header__navbar {
     width: 100%;
     display: flex;
@@ -65,6 +61,10 @@
 
 .header__navbar_item_current {
     font-weight: 500;
+}
+
+.header__menu {
+    display: none;
 }
 
 @media screen and (max-width: 767px) {
