--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -49,6 +49,10 @@
     padding: 0; /* сбросить стандартные отступы */
 }
 
+.footer_inactive {
+    display: none;
+}
+
 @media screen and (max-width: 1279px) {
     .footer {
         padding-left: 30px;
