fix: отредактировать скрытие шапки сайта на странице об ошибке

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,6 +11,10 @@
     padding-right: 70px;
 }
 
+.header_inactive {
+    display: none;
+}
+
 @media screen and (max-width: 1279px) {
     .header {
         padding-left: 30px;
