--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -28,13 +28,14 @@
 
 .header__navbar_item-account {
     background-color: #313131;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 8px 20px;
     height: 32px;
     border-radius: 20px;  
     color: #fff;
     font-weight: 500;
     font-size: 14px;
+    line-height: 16px;
+    text-decoration: none;
     display: flex;
     align-items: center;
 }
