--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -20,6 +20,15 @@
   margin-top: 0; /*сброшены стандартные отступы*/
   margin-bottom: 0; /*сброшены стандартные отступы*/
   color: #fff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 280px;
+}
+
+.movies-card__about-name:hover {
+  text-overflow: initial;
+  white-space: initial;
 }
 
 .movies-card__about-duration {
@@ -60,4 +69,11 @@
 .movies-card__image {
   max-width: 100%;
   max-height: 100%;
+}
+
+
+@media screen and (max-width: 1279px) {
+  .movies-card__about-name {
+    max-width: 230px;
+  }
 }
