--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -66,6 +66,10 @@
   opacity: 0.5;
 }
 
+.movies-card__icon-like_active {
+  background-image: url(../../images/icon-saved-active.svg);
+}
+
 .movies-card__image {
   max-width: 100%;
   max-height: 100%;
