--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -41,6 +41,11 @@
     align-items: center;
 }
 
+
+.header__navbar_item-account_inactive {
+    display: none;
+}
+
 .header__navbar_item-movies {
     background-color: unset;
     font-weight: 400;
