--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -70,6 +70,10 @@
   background-image: url(../../images/icon-saved-active.svg);
 }
 
+.movies-card__icon-like_delete {
+  background-image: url(../../images/icon-delete.svg);
+}
+
 .movies-card__image {
   max-width: 100%;
   max-height: 203px;
