--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -40,14 +40,18 @@
 }
 
 .preloader {
-    display: flex;
+    /* display: flex; */
     align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
     z-index: 10;
     padding: 20px;
-    visibility: hidden;
+    display: none;
+}
+
+.preloader_opened {
+    display: flex;
 }
 
 .preloader__container {
@@ -87,8 +91,3 @@
     background: #FF6838;
     animation: preloader-inside-red 1s ease-in-out infinite;
 }
-
-.preloader_opened {
-    visibility: visible;
-    /* opacity: 1; */
-  }
