--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -22,6 +22,11 @@
     font-weight: 500;
     color: #fff;
     cursor: pointer;
+    display: none;
+}
+
+.movies-container__more-button_active {
+    display: initial;
 }
 
 @media screen and (max-width: 1279px) {
